# programacaiii_api

./: .dockerignore  DEPLOY.md  Dockerfile  main.py  pyproject.toml  render.yaml
app/: database.py  main.py  security.py
app/auth/: auth_controller.py  auth_service.py
app/roles/: role_controller.py  role_model.py  role_repository.py  role_service.py
app/users/: user_controller.py  user_model.py  user_repository.py  user_service.py
app/utils/: image_processor.py
flutter_app/: pubspec.yaml
flutter_app/.dart_tool/: package_config.json  package_config_subset  package_graph.json
flutter_app/lib/models/: role.dart  user.dart
flutter_app/lib/screens/: roles_screen.dart
flutter_app/lib/services/: api_service.dart
tests/: test_auth_controller.py  test_role_controller.py  test_user_controller.py
users/: user_controller.py  user_model.py
